kitten/reported_bugs/rust/rust-86756/stderr.txt
error[E0403]: the name `T` is already used for a generic parameter in this item's generic parameters

 --> mutant.rs:4:1

  |

3 | trait Foo < T ,

  |             - first use of `T`

4 | T = T > { type Output ; fn dummy ( & self , t : T , v : V ) ;

  | ^ already used



error[E0412]: cannot find type `V` in this scope

 --> mutant.rs:4:57

  |

4 | T = T > { type Output ; fn dummy ( & self , t : T , v : V ) ;

  | - similarly named type parameter `T` defined here       ^ help: a type parameter with a similar name exists: `T`



error: internal compiler error: compiler/rustc_middle/src/ty/subst.rs:538:17: type parameter `T/#2` (T/2) out of range when substituting, substs=[FreshTy(0), (isize,)]

  --> mutant.rs:10:13

   |

10 | eq :: < dyn Foo < ( isize , ) , Output = ( ) > , dyn Foo ( isize ) > ( ) ;

   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



thread 'rustc' panicked at 'Box<dyn Any>', /rustc/6d820866a27b1949e237be79b9c8c0145fe728b7/compiler/rustc_errors/src/lib.rs:952:9

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.55.0-nightly (6d820866a 2021-06-29) running on x86_64-unknown-linux-gnu



note: compiler flags: -Z mir-opt-level=3 -Z new-llvm-pass-manager=yes -Z unsound-mir-opts=yes -Z polonius=yes -Z polymorphize=yes -C debuginfo=2 -C opt-level=3 --crate-type staticlib



query stack during panic:

#0 [typeck] type-checking `test`

#1 [typeck_item_bodies] type-checking all item bodies

end of query stack

error: aborting due to 3 previous errors



Some errors have detailed explanations: E0403, E0412.

For more information about an error, try `rustc --explain E0403`.

